Register thermostat and instrumentation modules with poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ version = "0.1.0"
 description = ""
 authors = ["Quinn Thibeault"]
 license = "BSD-3-Clause"
+packages = [
+    { include = "thermostat.py", from = "src" },
+    { include = "instrumentation", from = "src" }
+]
+
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
