Add branch-statement-analzyer as a dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,10 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+python = ">=3.10,<3.11"
 psy-taliro = "^1.0.0b7"
 numpy = "^1.23.3"
+branch-statement-analyzer = { git = "git@github.com:cpslab-asu/branch-statement-analyzer", rev = "3540b2e" }
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.971"
