Add pysoarc as dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ psy-taliro = "^1.0.0b7"
 numpy = "^1.23.3"
 branch-statement-analyzer = { git = "git@gitlab.com:sbtg/instrumentation/branch-statement-analyzer", rev = "af45d5d" }
 banquo = { git = "git@gitlab.com:sbtg/banquo-python", rev = "fa73bc07" }
+pysoarc = { git = "git@gitlab.com:sbtg/pysoar-c", rev ="71a1d720" }
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.971"
