--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ pytest = "^7.1.2"
 black = "^22.8.0"
 isort = "^5.10.1"
 
+[tool.poetry.scripts]
+main = "instrumentation.__main__:main"
+
 [tool.black]
 line-length = 100
 
